--- a/Problem-1-Pool/Problem-1-2-Pool.csproj
+++ b/Problem-1-Pool/Problem-1-2-Pool.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>Problem_1_Pool</RootNamespace>
+    <RootNamespace>Problem_1_2_Pool</RootNamespace>
   </PropertyGroup>
 
 </Project>
